# qgis_osrm

./: .gitignore  Makefile  README.md  __init__.py  code.sh  config.ini  metadata.txt  osrm_access_dialog.py  osrm_batch_route_dialog.py  osrm_dialog.py  osrm_dialog_tsp.py  osrm_plugin.py  osrm_polyfill.py  osrm_provider_dialog.py  osrm_table_dialog.py  osrm_utils.py  osrm_utils_extern.py  osrm_utils_lru_cache.py  osrm_utils_polylline_codec.py  providers.yml  pyproject.toml  resources.qrc  setup.cfg  template_osrm.py
i18n/: generate.sh  osrm_plugin.pro  osrm_plugin_en.ts  release.sh
img/diagrams/: class.d2
nbproject/: project.properties
ui/: osrm_access_dialog_base.ui  osrm_batch_route.ui  osrm_dialog_base.ui  osrm_dialog_tsp.ui  osrm_provider_dialog.ui  osrm_table_dialog_base.ui
